# aesalon

./: .aesalon.conf  .gitignore  CHANGELOG  CMakeLists.txt  Doxyfile  Makefile  README  RELEASE  SConstruct  TODO  aesalon  aesalon_gui  aesalon_visualizer  automated_test_loop.sh  build.config  configformat  generate_configuration.sh  newclass.pl  newsource.pl  newsource.py  pl.pl  this.conf  version_info  version_info.sh
gui/src/: .gitignore  ActiveSession.cpp  ActiveSession.h  ActiveSessionBlockView.cpp  ActiveSessionBlockView.h  ActiveSessionMemory.cpp  ActiveSessionMemory.h  ActiveSessionMemoryBlock.cpp  ActiveSessionMemoryBlock.h  ActiveSessionMemoryCommand.cpp  ActiveSessionMemoryCommand.h  ActiveSessionMemoryStorage.cpp  ActiveSessionMemoryStorage.h  ActiveSessionOverview.cpp  ActiveSessionOverview.h  ActiveSessionSocket.cpp  ActiveSessionSocket.h  Aesalon.cpp  CMakeLists.txt  Configuration.cpp  Configuration.h  MainArea.cpp  MainArea.h  MainWindow.cpp  MainWindow.h  OVERVIEW  Session.cpp  Session.h  SessionEditor.cpp  SessionEditor.h  SessionListWidget.cpp  SessionListWidget.h  SessionManager.cpp  SessionManager.h
modules/: CMakeLists.txt  SConscript  moduleInterface
modules/collectorInterface/: DataTypes.h  Interface.c  Interface.h
modules/cpuTime/: SConscript  module.conf
modules/informer/: SConscript  module.conf
modules/interfaces/: DataTypes.h  build_list  monitorInterface  visualizerInterface
modules/memory/: module.conf
monitor/src/: .gitignore  Aesalon.cpp  BidirectionalPipe.cpp  CMakeLists.txt  ConfigurationItems  Coordinator.cpp  DataTypes.h  Initializer.cpp  Initializer.h  LogSystem.cpp  LogSystem.h  MemoryBlock.cpp  OVERVIEW  ProgramManager.cpp  ProgramManager.h  SConscript  StorageManager.cpp  StorageManager.h  StorageOffset.h  TCPServerSocket.cpp  TaintTracker.cpp  TaintedData.cpp  Types.cpp  Types.h  sourceDirectories
src/: Aesalon.cpp  CMakeLists.txt  SConscript  aesalon  version_info
src/aesalon/: Aesalon.cpp  ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt
src/artisan/: SConscript
src/config/: GlobalVault.cpp  Parser.cpp  SConscript  Vault.cpp
src/display/: CMakeLists.txt
src/gui/: .gitignore  ActiveSession.cpp  ActiveSession.h  ActiveSessionBlockView.cpp  ActiveSessionBlockView.h  ActiveSessionOverview.cpp  ActiveSessionOverview.h  ActiveSessionSocket.cpp  ActiveSessionSocket.h  Aesalon.cpp  AesalonConfiguration.cpp  AesalonConfiguration.h  Application.cpp  Application.h  CMakeLists.txt  Configuration.cpp  Configuration.h  Framework.cpp  Framework.h  GUIConfiguration.cpp  GUIConfiguration.h  MainArea.cpp  MainArea.h  MainWindow.cpp  MainWindow.h  Program.cpp  Program.h  ProgramBlockDisplay.cpp  ProgramBlockDisplay.h  ProgramDisplay.cpp  ProgramDisplay.h  ProgramReferenceDisplay.cpp  ProgramReferenceDisplay.h  Session.cpp  Session.h  SessionEditor.cpp  SessionEditor.h  SessionListWidget.cpp  SessionListWidget.h  SessionManager.cpp  (+2 more)
src/informer/: SConscript  informer.c
src/interface/: Aesalon.cpp  ArgumentList.cpp  ArgumentList.h  BidirectionalPipe.cpp  BidirectionalPipe.h  Breakpoint.cpp  Breakpoint.h  CMakeLists.txt  GDBNotification.cpp  GDBNotification.h  GDBParser.cpp  GDBParser.h  Initializer.cpp  Initializer.h  Interface.cpp  Memory.cpp  Memory.h  MemoryAddress.cpp  MemoryAddress.h  MemoryBlock.cpp  MemoryBlock.h  MemoryBlockManager.cpp  MemoryBlockManager.h  MemoryReference.cpp  MemoryReference.h  MemoryReferenceManager.cpp  MemoryReferenceManager.h  Message.cpp  Message.h  PTracePortal.cpp  PTracePortal.h  PTraceSignalObserver.cpp  PTraceSignalObserver.h  PipeListener.cpp  PipeListener.h  Program.cpp  Program.h  ProgramManager.cpp  ProgramManager.h  ScopeList.cpp  (+6 more)
src/malloc/: CMakeLists.txt  bootstrap.c  bootstrap.h  comm.c  comm.h  common.c  common.h  malloc.c  passthrough.c  passthrough.h  stack_magic.c  stack_magic.h
src/misc/: ArgumentList.cpp  ArgumentParser.cpp  EventQueue.cpp  EventQueue.h  OutOfMemoryException.cpp  ReferenceCounter.h  SmartPointer.h  String.cpp  String.h  StringEscaper.cpp  StringEscaper.h
src/monitor/: Aesalon.cpp  ArgumentParser.cpp  Breakpoint.cpp  Breakpoint.h  CMakeLists.txt  Coordinator.cpp  DataOutputController.cpp  ElfParser.cpp  InformerMarshal.cpp  Initializer.cpp  Initializer.h  Launcher.cpp  LogOutput.cpp  Marshal.cpp  MarshalList.cpp  MarshalWrapper.cpp  Memory.cpp  Memory.h  MemoryBlock.h  Message.cpp  Message.h  ModuleList.cpp  ProgramManager.cpp  ProgramManager.h  SConscript  SHMReader.cpp  SymbolResolver.cpp  TCPServerSocket.h  TCPSocket.cpp  TCPSocket.h  TaintTracker.cpp  TaintTracker.h  TaintedData.h  Types.cpp  Types.h  ZoneReader.cpp
src/overload/: CMakeLists.txt  Overload.c  Overload.h  communication.c  communication.h  detect_platform.sh  overload.c  overload.h
src/platform/: ArgumentList.cpp  ArgumentList.h  BidirectionalPipe.cpp  BidirectionalPipe.h  BlockEvent.cpp  BlockEvent.h  CMakeLists.txt  Event.cpp  Event.h  EventQueue.cpp  EventQueue.h  Memory.cpp  Memory.h  MemoryAddress.h  MemoryBlock.cpp  MemoryBlock.h  MemoryBlockManager.cpp  MemoryBlockManager.h  MemoryEvent.cpp  MemoryEvent.h  MemoryReference.cpp  MemoryReference.h  MemoryReferenceManager.cpp  MemoryReferenceManager.h  NamedPipe.cpp  NamedPipe.h  PipeException.cpp  PipeException.h  PipeListener.cpp  PipeListener.h  PipeQueue.cpp  PipeQueue.h  PlatformException.cpp  PlatformException.h  Program.cpp  Program.h  Symbol.cpp  Symbol.h  SymbolManager.cpp  SymbolManager.h  (+4 more)
src/shm/: SConscript
src/storage/: Mempool.cpp  RTree.cpp  SConscript
src/util/: MessageSystem.cpp  PathSanitizer.cpp  SConscript
src/visualizer/: Aesalon.cpp  ArtisanManager.cpp  ArtisanManagerWidget.cpp  (+15 more)
tests/: .gitignore  CMakeLists.txt  SConscript  alloc_test  alloc_test.c  automated_test.c  build_list  calloc_test.c  cpp_new_test  cpp_new_test.cpp  cpu_test  cpu_test.c  exitTest.c  fib_benchmark.c  interactive_malloc_test.c  interactive_test.c  log_test  log_test.c  mallocTest.c  mallocTest5.c  malloc_test  malloc_test.c  random_test.c  realloc_test.c  sleepTest.c  sleep_malloc  sleep_malloc.c  sleep_test  sleep_test.c
(+1034 files in other folders)
