add_definitions(-g -O0)
add_executable(malloc_test malloc_test.c)
add_executable(sleep_test sleep_test.c)
add_executable(sleep_malloc sleep_malloc.c)
add_executable(interactive_malloc_test interactive_malloc_test.c)
add_executable(realloc_test realloc_test.c)
add_executable(cpp_new_test cpp_new_test.cpp)
add_executable(fib_benchmark fib_benchmark.c)
target_link_libraries(fib_benchmark m)
